set up setting preferences, need to implement add new preference

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name="com.example.costoflivingdiary.PrefListPriceActivity" >
         </activity>
+        <activity
+            android:name="com.example.costoflivingdiary.PreferenceListActivity" >
+        </activity>
     </application>
 
 </manifest>
