--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name="com.example.costoflivingdiary.PreferenceListActivity" >
         </activity>
+                <activity
+            android:name="com.example.costoflivingdiary.AddPreferenceActivity" >
+        </activity>
     </application>
 
 </manifest>
